--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,6 +1,11 @@
 #footer {
-  margin-top: 4rem;
+  
+  display:  flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
+  margin-top: 4rem;
   background: #393838;
   color: #fff;
   height: 350px;
@@ -11,6 +16,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 1400px;
+    width: 100%;
 
     text-align: center;
 
@@ -52,7 +59,6 @@
             background: #fff;
 
             img {
-              // filter: invert(0);
               filter: opacity(0.8);
             }   
           }
