--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,9 +4,13 @@ main {
   justify-content: center;
   align-items: center;
 
+  max-width: 100%;
+
+  
   .about {
     width: 100%;
     height: 500px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
