--- a/src/styles/scrollToTopButton.scss
+++ b/src/styles/scrollToTopButton.scss
@@ -3,9 +3,20 @@
   bottom: 0.5rem;
   right: 0.5rem;
   cursor: pointer;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+
+
+  @media (max-width: 480px) {
+    max-width: 400px;
+    position: fixed;
+    bottom: 0;
+    right: 2rem;;
+  }
   
   img {
-    width: 70px;
+    max-width: 70px;
     filter: opacity(0.8);
 
     &:hover {
