--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 100%;
+  width: 100%;
   
 
   > a {
@@ -56,16 +56,22 @@
     justify-content: space-between;
 
     @media (max-width: 767px) {
-      flex-direction: column;
-      align-items: center;
-      margin: 0 auto;
+      margin: 10px 0 0 0;
 
-    }
-    
-    @media (max-width: 767px) {
       flex-direction: column;
+      justify-content: space-around;
+      margin-top: 2rem;
       align-items: center;
-      margin: 0 auto;
+      max-height: 1400px;
+      height: 100%; 
+
+      .primary-card {
+        margin: 0 0 2rem 0;
+      }
+      .secondary-card {
+        margin: 0 0 2rem 0;
+      }
+
     }
 
     .primary-card {
