Ajustando detalhes na responsividade

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,6 +10,10 @@
   color: #fff;
   height: 350px;
 
+  @media only screen and (max-device-width: 400px) {
+    width: 400px;
+  }
+
   .content {
     margin-top: 4rem;
     display: flex;
