--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,8 +4,12 @@ main {
   justify-content: center;
   align-items: center;
 
-  max-width: 100%;
+  width: 100%;
 
+  
+  @media only screen and (max-device-width: 600px) {
+    width: 400px;
+  }
   
   .about {
     width: 100%;
