--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -6,6 +6,10 @@
   justify-content: space-between;
   width: 100%;
   
+  
+  @media only screen and (max-device-width: 400px) {
+    width: 400px;
+  }
 
   > a {
     margin-top: 5rem;
@@ -55,12 +59,17 @@
     align-items: center;
     justify-content: space-between;
 
+    @media only screen and (max-device-width: 400px) {
+      margin: 1rem 0 0 0;
+    }
+
     @media (max-width: 767px) {
       margin: 10px 0 0 0;
 
       flex-direction: column;
       justify-content: space-around;
       margin-top: 2rem;
+      text-align: center;
       align-items: center;
       max-height: 1400px;
       height: 100%; 
@@ -73,6 +82,9 @@
       }
 
     }
+
+    
+    
 
     .primary-card {
       width: 100%;
